--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -22,7 +22,7 @@ jobs:
         NODE_ENV: production
         # Remove this line if you would like to skip using google analytics
         REACT_APP_GA_TRACKING_ID: UA-68649021-1
-        # This is set automatically by github
+        # This is set automatically by Github
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: | 
           git config user.name "Automated"
