--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-site",
   "version": "3.0.1",
-  "homepage": "https://zheng416.github.io/personal-website",
+  "homepage": "https://www.jacky-zheng.com",
   "license": "MIT",
   "repository": {
     "type": "git",
